--- a/alumni-mob/src/app/tab4/company-feedbacks/component/feedback/feedback.component.scss
+++ b/alumni-mob/src/app/tab4/company-feedbacks/component/feedback/feedback.component.scss
@@ -26,12 +26,22 @@ HEAD
 .styleJob{
     color: #0d0d0d ;
     font-family: 'Georgia' , serif;
-    font-size: 20px;
-    letter-spacing: 2px;
+}
+.styleSalary{
+    color: #0d0d0d ;
+    font-family: 'Georgia' , serif;
+    margin-left: 1px;
 }
 .styleNote{
     margin-top: 0%;
     color: #313131;
     font-family: 'Georgia' , serif;
     font-size: 15px;
+}
+.styleFeedText{
+    color: #0d0d0d ;
+    font-family: 'Georgia' , serif;
+    font-size: 20px;
+    font-weight: 300;
+    letter-spacing: 2px;
 }
