--- a/alumni-mob/src/app/tab4/tab4.page.html
+++ b/alumni-mob/src/app/tab4/tab4.page.html
@@ -23,7 +23,7 @@
     </ion-infinite-scroll> -->
 
     <ion-fab slot="fixed" vertical="bottom" horizontal="end" (click)="addFeedback()">
-      <ion-fab-button>
+      <ion-fab-button class="btncolor">
         <ion-icon name="add-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab>
