--- a/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.html
+++ b/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.html
@@ -25,3 +25,9 @@
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
+
+<ion-fab slot="fixed" vertical="bottom" horizontal="end" (click)="addFeedback()">
+  <ion-fab-button class="btncolor">
+    <ion-icon name="add-outline"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
