--- a/alumni-mob/src/app/tab4/company-feedbacks/component/feedback/feedback.component.html
+++ b/alumni-mob/src/app/tab4/company-feedbacks/component/feedback/feedback.component.html
@@ -1,16 +1,19 @@
-<ion-card (click)="showAll()">
+<ion-card>
   <ion-card-header>
     <ion-card-title>
       <ion-grid>
         <ion-row>
-          <ion-col class="styleFeed">{{ feedback.firstname }} {{feedback.lastname}}
+          <ion-col class="styleFeed">{{ feedback.firstname }} {{feedback.lastname}}</ion-col>
+          <ion-col class="styleRating">{{ feedback.rating }}</ion-col>
+        </ion-row>
+        <ion-row>
           <ion-card-subtitle class="styleJob">{{ feedback.jobTitle }} <br> du {{feedback.jobStartDate | date: 'dd/MM/yyy'}} au {{feedback.jobEndDate | date: 'dd/MM/yyy'}}</ion-card-subtitle>
-        <ion-card-subtitle class="styleJob" *ngIf="feedback.salaryLow !== null">
+        </ion-row>
+        <ion-row>
+          <ion-card-subtitle class="styleJob" *ngIf="feedback.salaryLow !== null">
             <ion-note *ngIf="feedback.salaryLow && feedback.salaryHigh === null">Salaire : {{feedback.salaryLow}}€ {{feedback.salaryFormat}}</ion-note>
             <ion-note *ngIf="feedback.salaryLow && feedback.salaryHigh">Salaire: {{feedback.salaryLow}}€ et {{feedback.salaryHigh}}€ {{feedback.salaryFormat}}</ion-note>
-        </ion-card-subtitle>  
-        </ion-col>
-          <ion-col class="styleRating">Avis:{{ feedback.rating }}</ion-col>
+          </ion-card-subtitle>
         </ion-row>
       </ion-grid>
     </ion-card-title>
@@ -19,8 +22,14 @@
     <ion-card-title class="styleFeed">{{ feedback.feedbackTitle }}</ion-card-title>
     <ion-label class="styleFeedText" *ngIf="hide && feedback.feedbackText.length > 60">{{feedback.feedbackText.substring(0, 60)}}  ...</ion-label>
     <ion-label class="styleFeedText" *ngIf="!hide || feedback.feedbackText.length <= 60">{{feedback.feedbackText}}</ion-label>
+    <ion-toolbar *ngIf="hide" class="expand-fold" (click)="showAll()">
+      <ion-icon name="chevron-down-outline"></ion-icon>
+    </ion-toolbar>
     <div class="footer" *ngIf="!hide">
       <ion-note class="styleNote">Posté le {{feedback.postedAt | date: 'dd/MM/yyy'}}</ion-note>
+      <ion-toolbar class="expand-fold" (click)="showAll()">
+        <ion-icon name="chevron-up-outline"></ion-icon>
+      </ion-toolbar>
     </div>
   </ion-card-content>
 
