Frontend: FeedbackComponent's folded/expanded state can be set from HTML

--- a/alumni-mob/src/app/tab4/components/feedback-form-step6/feedback-form-step6.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step6/feedback-form-step6.component.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <app-feedback class="comp" [feedback]="companyFeedback" [index]="0"></app-feedback>
+  <app-feedback class="comp" [feedback]="companyFeedback" [index]="0" [hide]="false"></app-feedback>
 
   <ion-checkbox labelPlacement="start" alignment="center" (ionChange)="toggleCharterRespect($event)">Je confirme que retour d'expérience respecte la charte</ion-checkbox>
 
