--- a/alumni-mob/src/app/tab4/company-feedbacks/component/feedback/feedback.component.scss
+++ b/alumni-mob/src/app/tab4/company-feedbacks/component/feedback/feedback.component.scss
@@ -1,6 +1,7 @@
 HEAD
 .footer {
     margin-top: 10px;
+    align-items: end;
 }
 .styleFeed{
     color: #0d0d0d ;
@@ -37,6 +38,7 @@ HEAD
     color: #313131;
     font-family: 'Georgia' , serif;
     font-size: 15px;
+    border: 3px, #0d0d0d;
 }
 .styleFeedText{
     color: #0d0d0d ;
@@ -54,4 +56,7 @@ HEAD
 .ion-icon {
     margin: 0;
     padding: 0;
+}
+.postedAt {
+    text-align: end;
 }
