alignment of logo end connexion for the login page

--- a/alumni-mob/src/app/login/components/signin.component.html
+++ b/alumni-mob/src/app/login/components/signin.component.html
@@ -11,14 +11,14 @@
     <div class="auth-container">
       <ion-button class="btncolor" type="submit" [disabled]="form.invalid" shape="round">Se connecter</ion-button>
       <br>
-      <ion-button class="btncolor" type="submit" shape="round">S'identifier</ion-button>
+      <ion-button class="btncolor" type="submit" shape="round">Activer mon compte</ion-button>
     </div>
   </ion-list>
     <ion-card-header class="styleContent">
     <ion-card-title  class="styleTitle">Si tu es ici, c’est que tu fais partie de nos Alumni, et c’est une grande fierté ! </ion-card-title>
     </ion-card-header>
   <ion-card-content class="styleContent">
-    Félicitations, tu viens d’intégrer notre réseau privé qui rassemble les anciens élèves du centre Aelion, présent à travers 15 agences en France.
+    Félicitations, tu vas intégrer notre réseau privé qui rassemble les anciens élèves du centre Aelion, présent à travers 15 agences en France.
   </ion-card-content>
   <div>
   <ion-col class="styleCol">
