--- a/alumni-mob/src/app/login/components/signin.component.scss
+++ b/alumni-mob/src/app/login/components/signin.component.scss
@@ -14,12 +14,13 @@
   height: auto;
   justify-content: center;
 }
+
 .styleContent{
   color: #000000 ;
   font-family: 'Georgia' , serif;
-  font-size: 25px;
-  font-weight: 300;
-  letter-spacing: 2px;
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 3px;
   display: flex;
   justify-content: center;
 }
@@ -50,8 +51,19 @@
   font-weight: bold;
 }
 .styleCol{
-  font-size: 24px;
-  font-weight: 300;
+  font-size: 30px;
   letter-spacing: 2px;
   margin-left: 200px;
+}
+.styleTitleLogo {
+  width: 100%;
+  height:100%;
+  display: flex;
+  align-items:  center;
+  margin-right: 25%;
+  color: white;
+  font-family: 'Georgia' , serif;
+  font-size: 26px;
+  font-weight: 300;
+  letter-spacing: 2px;
 }
