--- a/alumni-mob/src/app/login/login.page.html
+++ b/alumni-mob/src/app/login/login.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar class="toolbarLayOut">
     <div class="toolBarChild">
       <img class="logoSize" src="/assets/logo-aelion-blanc.png">
-      <h1 class="styleHead"> Login </h1>
+      <h1 class="styleHead"> Connexion </h1>
     </div>
   </ion-toolbar>
 </ion-header>
@@ -10,7 +10,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Login</ion-title>
+      <ion-title size="large">Connexion</ion-title>
     </ion-toolbar>
   </ion-header>
   <app-signin></app-signin>
