--- a/alumni-mob/src/app/login/login.page.scss
+++ b/alumni-mob/src/app/login/login.page.scss
@@ -1,19 +1,23 @@
 .logoSize{
-    width:8%;
-    height:8%;
-    
+    width: 12%;
+    height:12%;
+    margin-top: 8px;
 }
 .toolbarLayOut{
     display:flex;
-    //border:1px solid black;
 }
 .toolBarChild{
     width: 100%;
     height:100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: #2d3041;
-   
+    color: white;
+    font-family: 'Georgia' , serif;
+    font-size: 26px;
+    font-weight: bold;
+    letter-spacing: 2px;  
 }
 .border{
     //border:1px solid black;
@@ -25,4 +29,7 @@
     font-size: 26px;
     font-weight: 300;
     letter-spacing: 2px;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
 }
