--- a/alumni-mob/src/app/tab2/tab2.page.scss
+++ b/alumni-mob/src/app/tab2/tab2.page.scss
@@ -23,6 +23,6 @@
     color: #ffffff ;
     font-family: 'Georgia' , serif;
     font-size: 26px;
-    font-weight: 300;
-    letter-spacing: 2px;
+    font-weight: bold;
+    letter-spacing: 3px;
 }
