--- a/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.html
+++ b/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.html
@@ -7,8 +7,7 @@
         </ion-button>
       </div>
       <div class="title">
-        <img class="logoSize" src="/assets/logo-aelion-blanc.png">
-        <h1> {{company?.name}} </h1>
+        <h1 class="styleHead"> {{company?.name}} </h1>
       </div>
     </div>
   </ion-toolbar>
