--- a/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.scss
+++ b/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.scss
@@ -57,3 +57,10 @@
     font-weight: 300;
     letter-spacing: 2px;
 }
+.styleHead{
+    color: #ffffff ;
+    font-family: 'Georgia' , serif;
+    font-size: 26px;
+    font-weight: bold;
+    letter-spacing: 3px;
+}
