--- a/alumni-mob/src/app/tab4/tab4.page.html
+++ b/alumni-mob/src/app/tab4/tab4.page.html
@@ -1,8 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbarLayOut">
     <div class="toolBarChild">
-      <img class="logoSize" src="/assets/logo-aelion-blanc.png">
-      <h1 class="styleHead"> Expériences Professionnelles </h1>
+      <h1 class="styleHead"> Retours d'epériences </h1>
     </div>
   </ion-toolbar>
 </ion-header>
