--- a/alumni-mob/src/app/tab4/tab4.page.scss
+++ b/alumni-mob/src/app/tab4/tab4.page.scss
@@ -23,8 +23,8 @@
     color: #ffffff ;
     font-family: 'Georgia' , serif;
     font-size: 26px;
-    font-weight: 300;
-    letter-spacing: 2px;
+    font-weight: bold;
+    letter-spacing: 3px;
 }
 .inputStyle{
     width: 100%;
