--- a/alumni-mob/src/app/tab4/components/feedback-form-step2/feedback-form-step2.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step2/feedback-form-step2.component.html
@@ -4,10 +4,7 @@
     <ion-buttons slot="start">
       <ion-button color="medium" (click)="previous()"><ion-icon name="arrow-back"></ion-icon></ion-button>
     </ion-buttons>
-    <ion-title>Nouvel Avis - étape 2</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="next()" [strong]="true">Suivant</ion-button>
-    </ion-buttons>
+    <ion-title>Nouveau retour d'expérience</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -38,8 +35,9 @@
     </ion-item>
 
     <p>help</p>
-
-    <ion-button type="button" (click)="next()" [disabled]="!form.valid">Créer l'entreprise</ion-button>
+    <ion-toolbar class="feedback-form-bottom-toolbar">
+      <ion-button (click)="next()" [disabled]="!form.valid" shape="round">Suivant <ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
+    </ion-toolbar>
   </form>
 </ion-content>
 
