add click on name in feedback component who redirect to his profile

--- a/alumni-mob/src/app/tab4/company-feedbacks/component/feedback/feedback.component.html
+++ b/alumni-mob/src/app/tab4/company-feedbacks/component/feedback/feedback.component.html
@@ -3,7 +3,7 @@
     <ion-card-title>
       <ion-grid>
         <ion-row>
-          <ion-col class="styleFeed">{{ feedback.firstname }} {{feedback.lastname}}</ion-col>
+          <ion-col class="styleFeed" (click)="goToProfile()">{{ feedback.firstname }} {{feedback.lastname}}</ion-col>
           <ion-col class="styleRating">{{ feedback.rating }}</ion-col>
         </ion-row>
         <ion-row>
