--- a/alumni-mob/src/app/tab4/components/feedback-form-step4/feedback-form-step4.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step4/feedback-form-step4.component.html
@@ -15,10 +15,10 @@
   <p>Veillez donc à respecter cette charte :</p>
   <ion-list>
     <!-- <ion-list-header>Veillez donc à respecter cette charte :</ion-list-header> -->
-    <ion-item>Les retours sont uniquement destinés à notre communauté. Ne les transmettez pas hors de la communauté.</ion-item>
-    <ion-item>Les retours ne sont pas un défouloir. Pas d'insultes et de langage vulgaire</ion-item>
-    <ion-item>Ne pas nommer d'individus (hiérarchie, collègues, ...)</ion-item>
-    <ion-item>...</ion-item>
+    <ion-item lines="none"><ion-icon class="height" name="caret-forward-outline"></ion-icon><ion-label>Les retours sont uniquement destinés à notre communauté. Ne les transmettez pas hors de la communauté.</ion-label></ion-item>
+    <ion-item lines="none"><ion-icon class="height" name="caret-forward-outline"></ion-icon><ion-label>Les retours ne sont pas un défouloir. Pas d'insultes et de langage vulgaire</ion-label></ion-item>
+    <ion-item lines="none"><ion-icon class="height" name="caret-forward-outline"></ion-icon><ion-label>Ne pas nommer d'individus (hiérarchie, collègues, ...)</ion-label></ion-item>
+    <ion-item lines="none"><ion-icon class="height" name="caret-forward-outline"></ion-icon><ion-label>...</ion-label></ion-item>
   </ion-list>
   <p>Enfin, nous vous rappelons aussi que les retours d'expérience sont soumis à une modération avant publication.</p>
 
