adding method to retrieve user datas

--- a/alumni-mob/src/app/tab4/components/feedback-form-step1/feedback-form-step1.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step1/feedback-form-step1.component.html
@@ -10,7 +10,7 @@
 <ion-content class="ion-padding">
   <ion-item>
     <p>Renseigner un avis sur votre entreprise actuelle  </p>
-    <ion-checkbox [(ngModel)]="isChecked" (ionChange)="retrieveInternId()"></ion-checkbox>
+    <ion-checkbox [(ngModel)]="isChecked" (ionChange)="getIntern()"></ion-checkbox>
   </ion-item>
   <p> ou </p>
   <p>chercher une entreprise dans notre BDD</p>
