add boolean isPreview on feedback component and use it in feedback-form-step6

--- a/alumni-mob/src/app/tab4/components/feedback-form-step6/feedback-form-step6.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step6/feedback-form-step6.component.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <app-feedback class="comp" [feedback]="companyFeedback" [index]="0" [hide]="false"></app-feedback>
+  <app-feedback class="comp" [feedback]="companyFeedback" [index]="0" [isPreview]="false"></app-feedback>
 
   <ion-checkbox labelPlacement="start" alignment="center" (ionChange)="toggleCharterRespect($event)">Je confirme que mon retour d'expérience respecte la charte</ion-checkbox>
 
