Uniformize header in step 1 + fix a typo in tab4

--- a/alumni-mob/src/app/tab4/tab4.page.html
+++ b/alumni-mob/src/app/tab4/tab4.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbarLayOut">
     <div class="toolBarChild">
-      <h1 class="styleHead"> Retours d'epériences </h1>
+      <h1 class="styleHead"> Retours d'expérience </h1>
     </div>
   </ion-toolbar>
 </ion-header>
