--- a/alumni-mob/src/app/tab4/components/feedback-form-step1/feedback-form-step1.component.scss
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step1/feedback-form-step1.component.scss
@@ -5,10 +5,47 @@
     justify-content: center;
     background-color: #2d3041;  
 }
+
 .toolbarLayOut{
     display:flex;
     //border:1px solid black;
 }
+
+.return {
+    width: 30%;
+  height: 100%;
+  display: flex;
+  align-items: start;
+  margin-left: 1%;
+  margin-top: 2%;  
+}
+
+.btncolor {
+    --background: var(--ion-color-btn);
+}
+
+.title {
+    width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: white;
+  font-family: "Georgia", serif;
+  font-size: 26px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  margin-left: -16%;
+}
+
+.styleHead{
+    color: #ffffff ;
+    font-family: 'Georgia' , serif;
+    font-size: 26px;
+    font-weight: bold;
+    letter-spacing: 3px;
+    margin-top: 3%;
+}
+
 .styleTitle{
     background-color: #2d3041;
 }
