--- a/alumni-mob/src/app/tab4/components/feedback-form-step1/feedback-form-step1.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step1/feedback-form-step1.component.html
@@ -1,25 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar class="toolbarLayOut">
-    <div class="toolBarChild">
-      <div class="return">
-        <ion-button class="btncolor" (click)="cancel()">
-          <ion-icon name="close-outline"></ion-icon>
-        </ion-button>
-      </div>
-      <div class="title">
-        <h1 class="styleHead">Nouveau retour d'expérience</h1>
-      </div>
-    </div>
-  </ion-toolbar>
-  <!-- <ion-toolbar>
-    <div  class="toolBarChild">
-    <ion-buttons slot="start">
-      <ion-button color="medium" (click)="cancel()"><ion-icon name="close-outline"></ion-icon></ion-button>
-    </ion-buttons>
-    <ion-title class="styleHead">Nouveau retour d'expérience</ion-title>
-    </div>
-  </ion-toolbar> -->
-</ion-header>
+<app-feedback-form-header></app-feedback-form-header>
 
 <ion-content class="ion-padding">
   <ion-item>
