delete buton name on tabs

--- a/alumni-mob/src/app/tabs/tabs.page.html
+++ b/alumni-mob/src/app/tabs/tabs.page.html
@@ -2,21 +2,21 @@
   <ion-tab-bar class="tabBar" slot="bottom">
     <ion-tab-button class="tabBar" tab="tab1" href="/tabs/tab1">
       <ion-icon aria-hidden="true" name="reader-outline"></ion-icon>
-      <ion-label class="styleTabs">Acceuil</ion-label>
+      <ion-label class="styleTabs"></ion-label>
     </ion-tab-button>
 
     <ion-tab-button class="tabBar" tab="tab2" href="/tabs/tab2">
       <ion-icon aria-hidden="true" name="person-outline"></ion-icon>
-      <ion-label class="styleTabs">Membres</ion-label>
+      <ion-label class="styleTabs"></ion-label>
     </ion-tab-button>
 
     <ion-tab-button class="tabBar" tab="tab3" href="/tabs/tab3">
       <ion-icon aria-hidden="true" name="mail-outline"></ion-icon>
-      <ion-label class="styleTabs">Messagerie</ion-label>
+      <ion-label class="styleTabs"></ion-label>
     </ion-tab-button>
     <ion-tab-button class="tabBar" tab="tab4" href="/tabs/tab4">
       <ion-icon aria-hidden="true" name="business-outline"></ion-icon>
-      <ion-label class="styleTabs">Retour d'exp</ion-label>
+      <ion-label class="styleTabs"> </ion-label>
     </ion-tab-button>
     <app-logout></app-logout>
   </ion-tab-bar>
