--- a/alumni-mob/src/app/tab4/components/feedback-form-step2/feedback-form-step2.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step2/feedback-form-step2.component.html
@@ -1,13 +1,8 @@
 <!-- feedback-form-step2.component.html -->
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button color="medium" (click)="previous()"><ion-icon name="arrow-back"></ion-icon></ion-button>
-    </ion-buttons>
-    <ion-title>Nouveau retour d'expérience</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-feedback-form-header [isFirstStep]="false"></app-feedback-form-header>
+<ion-item>
+  <ion-label>Saisissez votre entreprise</ion-label>
+</ion-item>
 <ion-content class="ion-padding">
   <form [formGroup]="form">
     <ion-item>
