--- a/alumni-mob/src/app/tab4/components/feedback-form-step4/feedback-form-step4.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step4/feedback-form-step4.component.html
@@ -1,11 +1,7 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button color="medium" (click)="previous()"><ion-icon name="arrow-back"></ion-icon></ion-button>
-    </ion-buttons>
-    <ion-title>Nouveau retour d'expérience</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-feedback-form-header [isFirstStep]="false"></app-feedback-form-header>
+<ion-item>
+  <ion-label>La chartre : </ion-label>
+</ion-item>
 
 <ion-content class="ion-padding">
   <p>Vous allez maintenant pouvoir écrire votre retour d'expérience.</p>
